# time-agnostic-library

./: .coverage  .gitattributes  .gitignore  .gitmodules  .releaserc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  config.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml  python-package.yml  release.yml  run_tests.yml
bear/: config.json  count_statements.py  counter.db  explore_cb_data.py  find_highest_numbered_file.py  find_snapshots.py  gen_ocdm_prov.py  gen_prov_from_last.py  generate_ocdm_provenance.json  run_bear_benchmark.py
bear/current/bear_a_current/: bear.properties
benchmark/: benchmark_memory.csv  benchmark_memory.py  benchmark_memory_cache.csv  benchmark_time.csv  benchmark_time.py  benchmark_time_cache.csv  find_representative_entities.py  get_entities_by_frequent_changes_flowchart.plantuml  get_entities_by_snapshot_count_flowchart.plantuml  json_to_table.html  requirements.txt  run_benchmarks.bat  run_benchmarks.sh  setup_and_tests.py  statistics.json  statistics_blazegraph.json  statistics_fuseki.json  statistics_graphdb.json  statistics_virtuoso.json  triplestore_manager.py  w_cache_w_index.json  w_cache_w_out_index.json  w_out_cache_w_index.json  w_out_cache_w_out_index.json
benchmark/bear/: analyze_combined.py  analyze_results.py  config_benchmark.json  convert_to_ocdm.py  download.py  ingest_r43ples.py  ostrich_multi_snapshot.md  parse_queries.py  run_benchmark.py  run_ostrich_benchmark.py  run_r43ples_benchmark.py  setup_ostrich.sh  setup_qlever.sh  setup_r43ples.sh  verify_results.py
benchmark/config/blazegraph/: w_cache_w_index.json  w_cache_w_out_index.json  w_out_cache_w_index.json  w_out_cache_w_out_index.json
benchmark/config/fuseki/: w_cache_w_index.json  w_cache_w_out_index.json  w_out_cache_w_index.json  w_out_cache_w_out_index.json
benchmark/config/graphdb/: w_cache_w_index.json  w_cache_w_index_empty.json  w_cache_w_out_index.json  w_cache_w_out_index_empty.json  w_out_cache_w_index.json  w_out_cache_w_out_index.json
benchmark/config/virtuoso/: w_cache_w_index.json  w_cache_w_out_index.json  w_out_cache_w_index.json  w_out_cache_w_out_index.json
benchmark/css/: pixel.css
benchmark/data/: benchmark_memory.csv  benchmark_memory_blazegraph.csv  benchmark_memory_blazegraph_statistics.csv  benchmark_memory_statistics.csv  benchmark_time.csv  benchmark_time_blazegraph.csv  benchmark_time_statistics.csv  extract.py  statistics.csv
benchmark/db/prov/: blazegraph.rar
benchmarks/hobbit/hobbit-versioning-benchmark/: .gitignore  Makefile  README.md  pom.xml  virtuoso.ini.template
benchmarks/hobbit/hobbit-versioning-benchmark/docker/: versioningbenchmarkcontroller.docker  versioningdatagenerator.docker  versioningevaluationmodule.docker  versioningtaskgenerator.docker  versioningvirtuososystemadapter.docker
benchmarks/hobbit/hobbit-versioning-benchmark/required_files/: dbpediaLocations.txt  definitions.properties  entities_1000.txt  export_cws_tbd.sh  get_logs.sh  load_to_virtuoso.sh  run.sh  test.properties  versions_construction.sh  virtuoso.ini.template
benchmarks/hobbit/hobbit-versioning-benchmark/system/: checkpoint.sh  load.sh  run.sh  virtuoso.ini.template
benchmarks/hobbit/time-agnostic-system-adapter/: .gitignore  README.md  build.sh  pom.xml  settings.xml
diagrams/: cache.puml
docs/: astro.config.mjs  conf.py  index.rst  modules.rst  package-lock.json  package.json  time_agnostic_library.rst
docs/src/content/docs/: configuration.md  contributing.md  delta_queries.md  getting_started.md  index.mdx  ocdm_conversion.md  structured_queries.md  version_materialization.md
papers/md/: bear.md  oc_meta.md  time_agnostic.md
scripts/: prd.txt
src/time_agnostic_library/: __init__.py  agnostic_entity.py  agnostic_query.py  ocdm_converter.py  prov_entity.py  sparql.py  statistics.py  support.py
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  tasks.json
test/: config.json  test.py  test_AgnosticEntity.py  test_AgnosticQuery.py  test_BlazegraphQuery.py  test_Sparql.py  test_Support.py
tests/: config.json  config_blazegraph.json  config_fuseki.json  config_graphdb.json  config_no_cache.json  config_virtuoso.json  docker-compose.yml  download_test_datasets.py  load_test_data.py  prov.json  run_all_tests.py  setup-triplestore.sh  start-test-database.ps1  start-test-database.sh  stop-test-database.ps1  stop-test-database.sh  teardown-triplestore.sh  test_AgnosticEntity.py  test_AgnosticEntity_delta.py  test_AgnosticEntity_depth_and_reverse_relations.py  test_AgnosticEntity_edge_cases.py  test_AgnosticEntity_helpers.py  test_AgnosticEntity_history.py  test_AgnosticEntity_materialization.py  test_AgnosticEntity_state_at_time.py  test_AgnosticQuery.py  test_AgnosticQuery_edge_cases.py  test_BlazegraphQuery.py  test_DeltaQuery.py  test_Sparql.py  test_Sparql_edge_cases.py  test_Support.py  test_VersionQuery.py  test_fuseki.py  test_graphdb.py  test_ocdm_converter.py  test_statistics.py  test_virtuoso.py  triplestore_config.py
tests/coverage/: .coverage  .coveragerc
tests/kb/: data.nq
time-agnostic-system-adapter/: Dockerfile
time_agnostic_library/: __init__.py  agnostic_entity.py  agnostic_query.py  prov_entity.py  sparql.py  support.py
virtuoso-opensource/database/: virtuoso-temp.db  virtuoso.lck  virtuoso.trx
(+88 files in other folders)
