[project]
name = "time-agnostic-library"
version = "5.0.7"
description = "A Python library for performing time-travel queries on RDF datasets compliant with the OCDM v2.0.1 provenance specification."
readme = "README.md"
license = "ISC"
authors = [{name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it"}]
keywords = ["rdf", "provenance", "opencitations", "change-tracking", "time-traversal query"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "python-dateutil>=2.9.0.post0",
    "rdflib>=7.5.0",
    "rich>=14.3.2",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "chardet>=5.2.0",
    "coverage>=7.13.3",
    "coverage-badge>=1.1.2",
    "isort>=7.0.0",
    "pebble>=5.2.0",
    "psutil>=7.2.2",
    "qlever>=0.5.45",
    "requests>=2.32.5",
    "sphinx-autodoc-defaultargs>=0.1.2",
    "sphinx-material>=0.0.36",
    "wget>=3.2",
]

[project.urls]
Homepage = "https://github.com/opencitations/time-agnostic-library"
Repository = "https://github.com/opencitations/time-agnostic-library"
Documentation = "https://time-agnostic-library.readthedocs.io"

[project.scripts]
test = "tests.run_all_tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
