[project]
name = "time-agnostic-library"
version = "6.0.0"
description = "A Python library for performing time-travel queries on RDF datasets compliant with the OCDM v2.0.1 provenance specification."
readme = "README.md"
license = "ISC"
authors = [{name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it"}]
keywords = ["rdf", "provenance", "opencitations", "change-tracking", "time-traversal query"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "rdflib>=7.5.0",
    "sparqlite>=1.1.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "chardet>=5.2.0",
    "coverage>=7.13.3",
    "coverage-badge>=1.1.2",
    "isort>=7.0.0",
    "matplotlib>=3.10.8",
    "pebble>=5.2.0",
    "psutil>=7.2.2",
    "qlever>=0.5.45",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "ruff>=0.15.0",
    "wget>=3.2",
]

[project.urls]
Homepage = "https://github.com/opencitations/time-agnostic-library"
Repository = "https://github.com/opencitations/time-agnostic-library"
Documentation = "https://opencitations.github.io/time-agnostic-library"

[project.scripts]
test = "tests.run_all_tests:main"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "I",     # isort
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "C4",    # flake8-comprehensions
    "RUF",   # Ruff-specific
    "PERF",  # Perflint
    "PLC",   # Pylint conventions
    "PLE",   # Pylint errors
]
ignore = [
    "UP015",   # Unnecessary open mode parameters
    "E501",    # Line too long (handled by formatter)
    "SIM401",  # Use dict.get()
]

[tool.ruff.lint.isort]
known-first-party = ["time_agnostic_library"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
